Solved request bug and added reject friend Request
